# eeg-hardware

./: .gitignore  README.md  gitignore
0_hardware/: EEG.kicad_sch  VarWiderstand.kicad_sch  adc.kicad_sch  eeg_hardware_v2.kicad_pro  eeg_hardware_v2.kicad_sch  fpga.kicad_sch  impedance.kicad_sch  mcu.kicad_sch  power.kicad_sch  reference.kicad_sch  sensors.kicad_sch
1_firmware/: CMakeLists.txt  hardware_io.c  hardware_io.h  main.c  version.h.in
1_firmware/callbacks/: gpio_callbacks.c  gpio_callbacks.h  rpc_callbacks.c  rpc_callbacks.h
1_firmware/sens/: ad7779.c  (+1 more)
2_pc_datahandler/: pyproject.toml
2_pc_datahandler/data_reader/: __init__.py  reader.py
2_pc_datahandler/data_reader/src_data_reader/: __init__.py  data_analysis_test.py  data_loading.py  data_loading_test.py  data_post_processing.py  data_post_processing_test.py
2_pc_datahandler/eeg_api/: __init__.py  eeghw_control.py  eeghw_control_test.py  reader.py
2_pc_datahandler/eeg_api/src_eeg_api/: __init__.py  data_processing.py  data_processing_test.py  h5_handler_test.py  live_visualizer.py  lsl_handler.py  lsl_handler_test.py  mcu_communication_handler.py  poti.py  poti_test.py  serial_handler_test.py
2_pc_datahandler/example/: daq.py  dr.py
2_pc_datahandler/src/: __init__.py  data_analysis.py  data_analysis_test.py  data_loading_test.py  data_plotting.py  data_post_processing_test.py  data_processing_test.py  data_structures.py  h5_handler.py  h5_handler_test.py  live_visualizer.py  lsl_handler_test.py  mcu_communication_interface.py  poti_test.py  serial_handler.py  serial_handler_test.py
(+14 files in other folders)
